crates/quarto-markdown-pandoc/snapshots/error-corpus/json/036.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-20",
    "details": [
      {
        "content": {
          "content": "This is the opening '[--' mark",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 3,
            "file_id": 0,
            "start_offset": 0
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 29,
        "file_id": 0,
        "start_offset": 28
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing ']' for the editorial delete.",
      "type": "markdown"
    },
    "title": "Unclosed Editorial Delete"
  }
]
